Add basic html outline

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<title>Todo Cards</title>
 </head>
 <body>
+	<main class="main">
+		<div class="leftArrow"></div>
 
+		<div class="cards"></div>
+
+		<div class="rightArrow"></div>
+	</main>
 </body>
 </html>
