--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Todo Cards</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<main class="main">
-		<div class="leftArrow"></div>
+		<div class="leftArrow">&#9756;</div>
 
 		<div class="cards"></div>
 
-		<div class="rightArrow"></div>
+		<div class="rightArrow">&#9758;</div>
 	</main>
 </body>
 </html>
