--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 	<main class="main">
 		<div class="leftArrow">&#9756;</div>
 
-		<div class="cards"></div>
+		<div class="cards">
+			<div class="card">
+
+			</div>
+		</div>
 
 		<div class="rightArrow">&#9758;</div>
 	</main>
