--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Todo Cards</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
 	<main class="main">
@@ -11,7 +12,7 @@
 
 		<div class="cards">
 			<div class="card">
-
+				<i class="fa fa-trash-o" aria-hidden="true"></i>
 			</div>
 		</div>
 
