--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
 
 		<div class="cards">
 			<div class="card">
-				<i class="fa fa-trash-o" aria-hidden="true"></i>
+
+				<div class="actionDiv">
+					<div class="deleteButton">
+						<i class="fa fa-trash-o" aria-hidden="true"></i>
+					</div>
+
+					<div class="doneButton">
+						<i class="fa fa-check" aria-hidden="true"></i>
+					</div>
+
+					<div class="editButton">
+						<i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+					</div>
+				</div>
+
+				<div class="textDiv">
+					<span class="text">Add animation</span>
+				</div>
+
+				<div class="dateDiv">
+					<span class="div">26/06/2017</span>
+				</div>
 			</div>
 		</div>
 
