--- a/index.html
+++ b/index.html
@@ -41,5 +41,10 @@
 
 		<div class="addButton">+</div>
 	</main>
+
+	<!-- jQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+	<script src="js/app.js"></script>
 </body>
 </html>
