Add todo card on the screen

--- a/index.html
+++ b/index.html
@@ -15,30 +15,7 @@
 
 		<!-- Container for todo cards -->
 		<div class="cards">
-			<div class="card">
-
-				<div class="actionDiv">
-					<div class="deleteButton">
-						<i class="fa fa-trash-o" aria-hidden="true"></i>
-					</div>
-
-					<div class="doneButton">
-						<i class="fa fa-check" aria-hidden="true"></i>
-					</div>
-
-					<div class="editButton">
-						<i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-					</div>
-				</div>
-
-				<div class="textDiv">
-					<span class="text">Add animation</span>
-				</div>
-
-				<div class="dateDiv">
-					<span class="div">26/06/2017</span>
-				</div>
-			</div>
+			<span class="defaultMsg">Nothing here today! Add a todo...</span>
 		</div>
 
 		<!-- Arrow for next todo card-->
