Re-position action buttons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
 		<div class="rightArrow">&#9758;</div>
 
 		<!-- Button for showing a modal to get details of the todo to be added -->
-		<div class="addButton">+</div>
+		<div class="actionButtons">
+			<div class="deleteButton">
+				<i class="fa fa-trash-o" aria-hidden="true"></i>
+			</div>
+			<div class="doneButton">
+				<i class="fa fa-check" aria-hidden="true"></i>
+			</div>
+			<div class="editButton">
+				<i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+			</div>
+			<div class="addButton">+</div>
+		</div>
 
 		<!-- Modal that prompts user to enter the text content of the new todo -->
 		<div class="todoModal">
