Add code to edit todo

--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
 			</div>
 		</div>
 
+
+		<div class="editModal">
+			<div class="modalBody">
+				<h2>Edit Todo</h2>
+				<input type="text" class="editText"
+					placeholder="Enter new text" autofocus>
+				<div class="modalButtons">
+					<div class="close">Close</div>
+					<div class="edit">Edit</div>
+				</div>
+			</div>
+		</div>
+
 	</main>
 
 	<script src="js/app.js"></script>
