Add mobile banner

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 			</div>
 		</div>
 
+		<div class="mobileBanner">Sorry, this app is currently not available for mobile. Please try from a desktop.</div>
 	</main>
 
 	<script src="js/app.js"></script>
